kubernetes/rylylty-relaunch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      name: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12-alpine
          ports:
            - name: postgres
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - "pg_isready --host $POD_IP"
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - "pg_isready --host $POD_IP"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgres-storage
      volumes:
        - name: config-vol
          configMap:
            name: postgres-config-2
            items:
              - key: postgresql.conf
                path: postgresql.conf
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    name: postgres
spec:
  ports:
    - port: 5432
  selector:
    name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rylyty-rails
  labels:
    name: rylyty-rails
    app: rylyty
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rylyty-rails
  template:
    metadata:
      labels:
        name: rylyty-rails
    spec:
      containers:
        - name: rylyty-rails
          image: registry.digitalocean.com/electronicbites/rylyty:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "600Mi"
              cpu: "0.2"
            limits:
              memory: "1.5Gi"
              cpu: "0.4"
          ports:
            - containerPort: 3000
              name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: rylyty-rails
spec:
  type: ClusterIP
  selector:
    name: rylyty-rails
  ports:
    - port: 80
      targetPort: http-web-svc
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rylyty-ingress
  annotations:
    spec.ingressClassName: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/server-snippets: |
      proxy_intercept_errors on;
      error_page 404 "/";
spec:
  ingressClassName: nginx
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
        - rylyty.electronicbites.com
      # This secret must exist beforehand
      # The cert must also contain the subj-name foo.bar.com
      # https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/PREREQUISITES.md#tls-certificates
      secretName: rylyty-production-tls # < cert-manager will store the created certificate in this secret.
  rules:
    - host: "rylyty.electronicbites.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rylyty-rails
                port:
                  number: 80
